<resources>
    <string name="app_name" translatable="false">Wings Miner</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="error_tag" translatable="false">ERROR</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name" translatable="false">mining</string>
    <string name="channel_description" translatable="false">WingsMiner\'s default notification channel</string>
    <string name="persistent_notification">Wings Miner is currently up and running.</string>
    <string name="logoff">Log off</string>
    <string name="afirmacion">Yes</string>
    <string name="negacion">No</string>
    <string name="no_conexion">You need an active internet connection to access this funcionality.</string>
    <string name="salir_prompt">Do you want to close the app?</string>
    <string name="save">Save</string>
    <string name="aceptar">Accept</string>
    <string name="empty">There is no data to show at the moment.</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_upgrade" translatable="false">Upgrade</string>
    <string name="menu_plans">Plans</string>
    <string name="menu_history">History</string>
    <string name="menu_plan" translatable="false">Plan</string>
    <string name="menu_mhs" translatable="false">MHs</string>

    <!-- PREVIEW-->
    <string name="activity_preview_label_welcome">WELCOME</string>
    <string name="activity_preview_label_instructions">Wings Mobile offers you the opportunity to mine Ethereum while doing your daily activities. Click the bottom and follow the steps to start your own mining business.</string>

    <!-- HOME-->
    <string name="fragment_home_label_raised">Raised:</string>
    <string name="fragment_home_label_plan">Type of plan:</string>
    <string name="fragment_home_label_potency">Active potency:</string>
    <string name="fragment_home_label_daily">Daily target:</string>
    <string name="fragment_home_label_3g">3G/4G mining:</string>
    <string name="fragment_home_label_activated">Activated</string>
    <string name="fragment_home_label_deactivated">Deactivated</string>
    <string name="fragment_home_label_email">Email:</string>
    <string name="fragment_home_label_address">Address:</string>
    <string name="fragment_home_label_city">City:</string>
    <string name="fragment_home_label_state">State/Province:</string>
    <string name="fragment_home_label_country">Country:</string>
    <string name="fragment_home_button_update">Update profile</string>
    <string name="fragment_home_label_today_time">Today\'s mined time:</string>
    <string name="fragment_home_label_today_eth">Today\'s mined ETH:</string>

    <!-- UPGRADE-->
    <string name="activity_updgrade_label_title">UPGRADE YOUR MINING PLAN</string>
    <string name="activity_updgrade_label_soon">Coming soon!</string>

    <!-- RECYCLER -->
    <string name="fragment_recycler_label_plans_title">Plans</string>
    <string name="fragment_recycler_label_history_title">History</string>
    <string name="fragment_recycler_label_fecha">DAY</string>
    <string name="fragment_recycler_label_amount">MINED ETH</string>
    <string name="fragment_recycler_label_time">MINED TIME</string>

    <!-- REGISTRO -->
    <string name="title_activity_login">Register your device</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">First and middle name</string>
    <string name="prompt_lastname">Surname(s)</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_state">State/Province</string>
    <string name="prompt_city">City</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_wallet">TH Wallet</string>
    <string name="prompt_country2">Select your country:</string>
    <string name="prompt_state2">Select your state or province:</string>
    <string name="prompt_city2">Select your city:</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is empty or too small</string>

    <string name="url_countries" translatable="false">http://35.231.168.94/api/v1/countries</string>
    <string name="url_states" translatable="false">http://35.231.168.94/api/v1/states</string>
    <string name="url_phones" translatable="false">http://35.231.168.94/api/v1/phones</string>
    <string name="url_blocks" translatable="false">http://35.231.168.94/api/v1/blocks</string>
    <string name="url_plans" translatable="false">http://35.231.168.94/api/v1/plans</string>
</resources>
