<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_upgrade"
            android:icon="@drawable/ic_upgrade"
            android:title="@string/menu_upgrade" />
        <!--<item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_plans"
            android:title="@string/menu_plans" />-->
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
    </group>

</menu>
